--- a/.github/workflows/download-pages.yml
+++ b/.github/workflows/download-pages.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements
+          git branch download-pages
       
       - name: Download pages
         uses: jannekem/run-python-script-action@v1
@@ -39,7 +40,7 @@ jobs:
           script: |
             import gdown
             url = "https://drive.google.com/drive/folders/1nfG7TJ3_9_GK90xTEsjxrVMmzNO_dCQI"
-            gdown.download_folder(url=url, output='/home/runner/work/spiritual-studies/pages/', quiet=False, use_cookies=False)
+            gdown.download_folder(url=url, output='./pages/', quiet=False, use_cookies=False)
       
       - name: Commit and push changes
         run: |
@@ -47,4 +48,6 @@ jobs:
           git config --local user.name "GitHub Action"
           git add ./../pages/
           git commit -m "Update pages" -a
+          git checkout master
           git push
+          git merge download-pages
