--- a/.github/workflows/download-pages.yml
+++ b/.github/workflows/download-pages.yml
@@ -34,6 +34,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements
+          git pull
+          rm -rf pages
       
       - name: Download pages
         uses: jannekem/run-python-script-action@v1
